Bug 436354 - There is no way to definitively remove the inline message displayed after disabling baloo
Summary: There is no way to definitively remove the inline message displayed after dis...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_baloo (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-29 12:07 UTC by Patrick Silva
Modified: 2021-05-03 17:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments
screen recording (1.46 MB, video/webm)
2021-04-29 12:08 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-04-29 12:07:28 UTC
SUMMARY
Search KCM displays an inline message on top after disabling baloo.
We can remove it clicking on "X" or "Delete index data" buttons, but it reappears when
we re-open Search KCM. Please watch the attached screen recording.

EXPECTED RESULT
we should be able to definitively remove the inline message, keeping saved index data or not.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Graphics Platform: X11
Comment 1 Patrick Silva 2021-04-29 12:08:25 UTC
Created attachment 138001 [details]
screen recording
Comment 2 Nate Graham 2021-04-30 16:24:17 UTC
Ooh I know how to fix this
Comment 3 Bug Janitor Service 2021-04-30 21:03:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/448
Comment 4 Nate Graham 2021-05-03 17:54:34 UTC
Git commit e399041ea731736e2de9debb52657ac70144749a by Nate Graham.
Committed on 03/05/2021 at 17:54.
Pushed by ngraham into branch 'master'.

[kcms/baloo] Only show "Delete index?" message when there is an index

Otherwise it will always appear when indexing is disabled even after the
index has already been deleted.
FIXED-IN: 5.22

M  +7    -2    kcms/baloo/kcm.cpp
M  +2    -1    kcms/baloo/kcm.h
M  +2    -2    kcms/baloo/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/commit/e399041ea731736e2de9debb52657ac70144749a