[kcms/baloo] Only show "Delete index?" message when there is an index

Otherwise it will always appear when indexing is disabled even after the
index has already been deleted.

BUG: 436354
FIXED-IN: 5.22