kcms/baloo/kcm.h
@@ -44,7 +44,8 @@ public:
     FilteredFolderModel *filteredModel() const;
 
     Q_INVOKABLE void deleteIndex();
-    Q_INVOKABLE QString indexFileSize();
+    Q_INVOKABLE int rawIndexFileSize();
+    Q_INVOKABLE QString prettyIndexFileSize();
 
 public Q_SLOTS:
     void load() override;
